k8s/02-monitoring-kibana.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/enable-access-log: "false"
  name: kibana
  namespace: monitoring
spec:
  rules:
    - host: kibana.monitoring.172.20.30.21.xip.io
      http:
        paths:
          - backend:
              serviceName: monitoring-kb-http
              servicePort: 5601
  tls:
    - hosts:
        - kibana.monitoring.172.20.30.21.xip.io
